tests/reliability/reject/module_cycle.keel
import "mods/cyc_a.keel"
def main(sys: System); Io:
    println(a_fn())
